--- a/ruoyi-common/ruoyi-common-core/src/main/resources/i18n/messages_en_US.properties
+++ b/ruoyi-common/ruoyi-common-core/src/main/resources/i18n/messages_en_US.properties
@@ -19,6 +19,7 @@ user.password.not.blank=Password cannot be empty
 user.password.length.valid=Password length must be between {min} and {max} characters
 user.password.not.valid=* 5-50 characters
 user.email.not.valid=Mailbox format error
+user.phonenumber.not.blank=Phone number cannot be blank
 user.mobile.phone.number.not.valid=Phone number format error
 user.login.success=Login successful
 user.register.success=Register successful
@@ -38,3 +39,7 @@ no.delete.permission=You do not have permission to delete data\uFF0Cplease conta
 no.export.permission=You do not have permission to export data\uFF0Cplease contact your administrator to add permissions [{0}]
 no.view.permission=You do not have permission to view data\uFF0Cplease contact your administrator to add permissions [{0}]
 repeat.submit.message=Repeat submit is not allowed, please try again later
+sms.code.not.blank=Sms code cannot be blank
+sms.code.retry.limit.count=Sms code input error {0} times
+sms.code.retry.limit.exceed=Too many sms code errors, account locked for {0} minutes
+xcx.code.not.blank=Mini program code cannot be blank
