add 新增租户相关消息提示配置 ;

--- a/ruoyi-common/ruoyi-common-core/src/main/resources/i18n/messages.properties
+++ b/ruoyi-common/ruoyi-common-core/src/main/resources/i18n/messages.properties
@@ -47,3 +47,8 @@ email.code.not.blank=邮箱验证码不能为空
 email.code.retry.limit.count=邮箱验证码输入错误{0}次
 email.code.retry.limit.exceed=邮箱验证码输入错误{0}次，帐户锁定{1}分钟
 xcx.code.not.blank=小程序code不能为空
+##租户
+tenant.number.not.blank=租户编号不能为空
+tenant.not.exists=对不起, 您的租户不存在，请联系管理员
+tenant.blocked=对不起，您的租户已禁用，请联系管理员
+tenant.expired=对不起，您的租户已过期，请联系管理员
